--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,23 @@
-# See https://help.github.com/ignore-files/ for more about ignoring files.
-# IntelliJ project files
-.idea
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# Dependencies
+# dependencies
 /node_modules
+/.pnp
+.pnp.js
 
-# Test coverage
+# testing
 /coverage
 
-# Production files
+# production
 /build
-/dist
 
-# Debug logs
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
