--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^16.12.0",
     "react-camera": "^0.1.3",
     "react-dom": "^16.12.0",
+    "react-exif-orientation-img": "^0.1.5",
     "react-scripts": "3.2.0"
   },
   "scripts": {
